--- a/writeup/index.html
+++ b/writeup/index.html
@@ -78,7 +78,6 @@
                 <div class="row">
                     <div class="col-md-9 col-md-offset-2">
                         <p class="intro-text">Analysis and Dynamic Visualization of</p>
-                        
                         <h1 class="brand-heading">Stop & Frisk</h1>
                         <img id="logo" src="img/logo.png">
                         <p/>
@@ -395,51 +394,12 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <!-- <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-9 col-lg-offset-2">
-                <h2>The Team</h2>
-                <ul class="list-inline">
-                    <li>
-                        <p>Alexa Van Hattum</br>
-                        login: avanhatt</br>
-                        focus: data cleaning</br>
-                        & machine learning
-                        </p>
-                    </li>
-                    <li>
-                        <p>Eden Weizman</br>
-                        login: eweizman</br>
-                        focus: front end</br>
-                        developement
-                        </p>
-                    </li>
-                    <li>
-                        <p>Samuel Kortchmar</br>
-                        login: skortchm</br>
-                        focus: app framework</br>
-                        & visualizations</p>
-                    </li>
-                    <li>
-                       <p> Wenyi Lu</br>
-                        login: wl58</br>
-                        focus: database</br>
-                        & API</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Map Section -->
-<!--     <div id="map"></div> -->
-
     <!-- Footer -->
     <footer>
         <div class="container text-center">
             <p>Final Project Report, Spring 2015</p>
             <p>Logo Credit: ComplianceSigns, with a few edits</p>
+            <p>Photo Credits: <a href="http://commons.wikimedia.org/wiki/File:Above_Gotham.jpg">Wikipedia </a></p>
         </div>
     </footer>
 
