--- a/writeup/index.html
+++ b/writeup/index.html
@@ -347,7 +347,7 @@
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Looking Forward</h2>
                 <h3>Twitter</h3>
-               <p>One natural step forward would be the integration of twitter sentiment data with our map, as we initially intended to do. It would be interesting to see how this related to the number of complaints filed, and if twitter sentiment went down as more people were stopped and frisked.</p>
+               <p>One natural step forward would be the integration of twitter sentiment data with our map, as we initially intended to do as part of our 125% implementation. It would be interesting to see how this related to the number of complaints filed, and if twitter sentiment of tweets concerning the NYPD went down as more people were stopped and frisked.</p>
                <h3>Chicago</h3>
                <p>An idea which kept coming up as we were working on the project was using our current classifier, trained on our New York dataset, to analyze the stop-and-frisk habits of other cities. For example, Chicago is another city with a stop-and-frisk problem. However, it is known that officers tend to report stop-and-frisk incidents more inaccurately there. If Chicago and New York policemen were assumed to have similar habits, this misrepresentation could be quantified and analyzed.</p>
                <h3>Beyond</h3>
